Added folowing features : Screen for check off list, multi material list management when selecting litematica, and few QOL